third_party/move/move-compiler-v2/tests/simplifier-elimination/else_assigns_if_doesnt.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/simplifier-elimination/else_assigns_if_doesnt.move:6:14
  │
6 │         y = 0;
  │              ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/simplifier-elimination/else_assigns_if_doesnt.move:11:24
   │
11 │     assert!(y == 0, 42);
   │                        ^

// -- Model dump before bytecode pipeline
module <SELF>_0 {
    private fun main() {
        {
          let x: u64;
          {
            let y: u64;
            if true {
              y: u64 = 0;
              Tuple()
            } else {
              x: u64 = 42;
              x;
              Tuple()
            };
            if Eq<u64>(y, 0) {
              Tuple()
            } else {
              Abort(42)
            };
            Tuple()
          }
        }
    }
} // end <SELF>_0


Diagnostics:
error: use of possibly unassigned local `y`
   ┌─ tests/simplifier-elimination/else_assigns_if_doesnt.move:11:13
   │
11 │     assert!(y == 0, 42);
   │             ^^^^^^
